Fix text wrapping in freetext boxes.

--- a/app/character/static/scss/character.scss
+++ b/app/character/static/scss/character.scss
@@ -37,6 +37,9 @@
             }
         }
     }
+    .freetext {
+        white-space: pre-wrap;
+    }
     .weapons {
         @media
         only screen 
